[build-system]
requires = [
    "setuptools >= 61.0.0",  # Support for setuptools config in pyproject.toml
]
build-backend = "setuptools.build_meta"

[project]
name = "ansibug"
version = "0.1.0"
description = "Ansible Debug Adapter Protocol Implementation"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    { name = "Jordan Borean", email = "jborean93@gmail.com" }
]
keywords = [
  "ansible",
  "debug",
  "lsp",
  "dap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
homepage = "https://github.com/jborean93/ansibug"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ansibug = ["py.typed"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "tests/|docs/|build/"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
show_error_codes = true
show_column_numbers = true
# disallow_any_unimported = true  # Ansible doesn't have much annotation
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "ansible.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
junit_family = "xunit2"
