[metadata]
name = ansibug
version = 0.1.0
url = https://github.com/jborean93/ansibug
author = Jordan Borean
author_email = jborean93@gmail.com
license = MIT
license_files = LICENSE
description = Ansible Debug Adapter Protocol Implementation
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    ansible
    debug
    lsp
    dap
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =

[options.packages.find]
where = src

[options.package_data]
ansibug = py.typed
